# learning-objectives-chatbot

./: .pre-commit-config.yaml  README.md  README2.md  WORKFLOW.md  create-app-files.sh  pre-commit-config.yml  pyproject.toml
.github/workflows/: ci.yml  python-test-deploy.yml
src/learning_objectives_chatbot/: __init__.py  app.py  utils.py
src/streamlit_template/: __init__.py  app.py  utils.py
src/tests/: conftest.py  test_utils.py
